# apertium-br-fr

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-br-fr.br-fr.dix  apertium-br-fr.br-fr.lrx  apertium-br-fr.br-fr.lsx  apertium-br-fr.br-fr.ltx  apertium-br-fr.br-fr.rlx  apertium-br-fr.br-fr.rtx  apertium-br-fr.br-fr.t2x  apertium-br-fr.br.dix  apertium-br-fr.fr-br.rtx  apertium-br-fr.fr.metadix  configure.ac  lexchoicebil.xsl  modes.xml  pending-tests.sh  regression-tests.sh
test/: br-fr-autoseq-expected.txt  br-fr-biltrans-expected.txt  br-fr-disam-expected.txt  br-fr-generator-expected.txt  br-fr-input.txt  br-fr-lex-expected.txt  br-fr-morph-expected.txt  br-fr-pending-chunker2-expected.txt  br-fr-pending-disam-expected.txt  br-fr-pending-generator-expected.txt  br-fr-pending-input.txt  br-fr-pending-interchunk-expected.txt  br-fr-pending-morph-expected.txt  br-fr-pending-postchunk-expected.txt  br-fr-pending-postgen-expected.txt  br-fr-pending-postgen-gold.txt  br-fr-pending-pretransfer-expected.txt  br-fr-pending-tagger-expected.txt  br-fr-postgen-expected.txt  br-fr-postgen-gold.txt  br-fr-pretransfer-expected.txt  br-fr-regression-chunker2-expected.txt  br-fr-regression-disam-expected.txt  br-fr-regression-generator-expected.txt  br-fr-regression-input.txt  br-fr-regression-interchunk-expected.txt  br-fr-regression-morph-expected.txt  br-fr-regression-postchunk-expected.txt  br-fr-regression-postgen-expected.txt  br-fr-regression-postgen-gold.txt  br-fr-regression-pretransfer-expected.txt  br-fr-regression-tagger-expected.txt  tests.json  (+2 more)
